--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,7 @@ nav .profile-link a{
 .blogs-news-img-container img{
     width: 85%;
     margin-top: 35px;
+    border-radius: 170px;
 }
 
 .read-more-state {
@@ -249,6 +250,8 @@ nav .profile-link a{
 
 .blogs-posts-container .post-container img{
     width: 100%;
+    height: 250px;
+    border-radius: 15px;
 }
 
 footer{
