Actualización Monster Killer

--- a/css/main.css
+++ b/css/main.css
@@ -228,7 +228,7 @@ nav .profile-link a{
 }
 
 .blogs-posts-container {
-    padding: 0 50px 40px;
+    padding: 0px 50px 50px;
 }
 
 .blogs-posts-container h3{
