--- a/app/projects/page.module.css
+++ b/app/projects/page.module.css
@@ -14,6 +14,20 @@
   align-items: center;
 }
 
+@media screen and (max-width: 1115px) {
+  .section {
+    display: inline-block;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .section div{
+    display: inline-block;
+    max-width: 95%;
+    height: 400px;
+  }
+}
+
 .header{
   color: #ddd6cb;
     font-size: 1.5rem;
