Adjustment in css global and about page

--- a/app/about/page.module.css
+++ b/app/about/page.module.css
@@ -1,95 +1,118 @@
+.header{
+    display: flex;
+    color: #ddd6cb;
+    font-size: 1.5rem;
+    font-family: 'Montserrat', sans-serif;
+    justify-content: space-between;
+}
+
+.column{
+  flex: 1;
+  text-align: center;
+}
+
 .section{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.firstDiv {
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-  }
-
-  @media screen and (max-width: 700px) {
-    .section div {
-      max-width: 100%;
-    }
-    .photo {
-      margin: 0 auto; /* Centra la imagen horizontalmente en pantallas pequeñas */
-    }
 }
 
-  .section div{
-    width: 600px;
-    max-width: 45%; /* Ajusta el valor según tu preferencia */
-    height: 310px;
-    margin: 0 10px; /* O ajusta el valor de los márgenes según tu preferencia */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-  }
-
 .photo{
-    box-shadow: 0 0 0.6rem rgba(255, 255, 255, 0.8);
-    object-fit: cover;
-    position: absolute;
-    border-radius: 3px;
-  }
-  
-.header{
-    color: #ddd6cb;
-    font-size: 1.5rem;
-    gap: 3rem;
-    margin: 0% auto 2rem auto;
-    width: 90%;
-    max-width: 75rem;
-    font-family: 'Montserrat', sans-serif;
-  }
-  
-.highlight{
-    background: linear-gradient(90deg, #f9572a, #ff8a05);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .block {
-    position: relative;
-    width: 500px;
-    height: 250px;
-    background: linear-gradient(0deg, #000, #272727);
-    margin: 0 auto;
-  }
-  
-  .block:before, .block:after {
-    content: '';
-    position: absolute;
-    left: -2px;
-    top: -2px;
-    background: linear-gradient(45deg, #f9572a, #ff8a05, #000000, #f9572a, #ff8a05, #000000, 
-    #f9572a, #ff8a05, #000000);
-    background-size: 400%;
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
-    z-index: -1;
-    animation: steam 20s linear infinite;
-  }
-  
-  @keyframes steam {
-    0% {
-      background-position: 0 0;
-    }
-    50% {
-      background-position: 400% 0;
-    }
-    100% {
-      background-position: 0 0;
-    }
-  }
-  
-  .block:after {
-    filter: blur(50px);
-  }
+.secondDiv {
+  flex: 1;
+}
+
+.socialLinks {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 50px;
+}
 
 .text{
     flex-direction: column;
-    width: 100%;
+    width: auto;
     color: #ddd6cb;
     font-size: 1.1rem;
+    text-align: justify;
+    margin-right: 50px;
+}
+
+.highlight{
+  background: linear-gradient(90deg, #f9572a, #ff8a05);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+@media (max-width: 700px) {
+  .section {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .firstDiv,
+  .secondDiv {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .socialLinks {
+    margin: 0 auto;
+  }
+
+  .text {
+    margin: 0 auto;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
+
+.block {
+	position: relative;
+	width: 270px;
+	height: 310px;
+	background: linear-gradient(0deg, #000, #272727);
+}
+
+.block:before, .block:after {
+	content: '';
+	position: absolute;
+	left: -2px;
+	top: -2px;
+	background: linear-gradient(45deg, #f9572a, #ff8a05, #030303,#f9572a, #ff8a05, #030303, 
+  #f9572a, #ff8a05, #030303);
+	background-size: 400%;
+	width: calc(100% + 4px);
+	height: calc(100% + 4px);
+	z-index: -1;
+	animation: steam 20s linear infinite;
+}
+
+@keyframes steam {
+	0% {
+		background-position: 0 0;
+	}
+	50% {
+		background-position: 400% 0;
+	}
+	100% {
+		background-position: 0 0;
+	}
+}
+
+.block:after {
+	filter: blur(50px);
 }
