--- a/components/main-header.module.css
+++ b/components/main-header.module.css
@@ -3,6 +3,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 2rem 1rem;
+  position: sticky;
+  top: 0;
+  background-color: #302a23f3;
+  z-index: 2;
 }
 
 @media (min-width: 768px) {
@@ -49,10 +53,11 @@
   }
   
   .logo img {
-    width: 5rem;
-    height: 5rem;
+    width: 3rem;
+    height: 3rem;
     object-fit: contain;
     filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.5));
+    border-radius: 20px;
   }
 
   .nav ul {
@@ -61,6 +66,6 @@
     padding: 0;
     display: flex;
     gap: 1.5rem;
-    /* font-family: 'Montserrat', sans-serif; */
+    font-family: 'Montserrat', sans-serif;
     font-size: 1.25rem;
   }
