--- a/components/project-text.module.css
+++ b/components/project-text.module.css
@@ -31,6 +31,8 @@
   }
   
   .slideshow h1.active {
+    margin-top: 0;
+    margin-bottom: 0;
     background: linear-gradient(90deg, #f9572a, #ff8a05);
     background-clip: text;
     -webkit-background-clip: text;
