--- a/app/page.module.css
+++ b/app/page.module.css
@@ -13,6 +13,14 @@
       display: inline-block;
       font-size: 1rem;
     }
+    .principal h1, .principal h3{
+      margin-left: 20px;
+      text-align: justify;
+    }
+
+    .imgs{
+      margin-left: 15px;
+    }
   }
 
   .projects{
