--- a/app/globals.css
+++ b/app/globals.css
@@ -10,29 +10,7 @@ html {
 
 body {
   margin: 0;
-  background: linear-gradient(to top, #f58403, 2%, #2e2924);
+  background: linear-gradient(to top, #000000, 2%, #2e2924);
   background-attachment: fixed;
   background-repeat: no-repeat;
-}
-
-@keyframes show{
-  from {
-    opacity: 0;
-    scale: 25%;
-  }
-
-  to{
-    opacity: 1;
-    scale: 100%;
-  }
-}
-
-section{
-  view-timeline-name: --image;
-  view-timeline-axis: block;
-
-  animation-timeline: --image;
-  animation-name: show;
-
-  animation-range: entry 10% cover 30%;
 }
