--- a/components/main-header.module.css
+++ b/components/main-header.module.css
@@ -2,41 +2,39 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem 1rem;
   position: sticky;
   top: 0;
-  background-color: #302a23f3;
+  background-color: #241f1ff3;
   z-index: 2;
+  padding: 2rem 5%;
+  transition: 0.5s ease;
 }
 
-@media (min-width: 768px) {
-  .header {
-    padding: 2rem 10%;
-  }
+.smallHeader{
+  padding: 0.5rem 8%;
+  transition: 0.5s ease;
 }
 
 @media screen and (max-width: 700px) {
   .header{
+    width: 100%;
     display: inline-block;
+    padding: 0.3rem 2%;
+    transition: 0.5s ease;
+  }
+  .header a{
+    font-size: 0.6rem;
+    letter-spacing: 0.0rem;
+  }
+  .image{
+    width: 2rem;
+    height: 2rem;
+  }
+  .smallHeader{
+    padding: 0.3rem 5%;
+    transition: 0.5s ease;
   }
 }
-  
-  .hero {
-    color: #ddd6cb;
-    font-size: 1.5rem;
-  }
-  
-  .hero h1 {
-    font-size: 2rem;
-    font-weight: bold;
-    font-family: 'Montserrat', sans-serif;
-    letter-spacing: 0.15rem;
-    text-transform: uppercase;
-    background: linear-gradient(90deg, #f9572a, #ffc905);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
 
   .logo {
     display: flex;
@@ -52,10 +50,7 @@
     font-size: 1.5rem;
   }
   
-  .logo img {
-    width: 3rem;
-    height: 3rem;
-    object-fit: contain;
+  .image {
     filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.5));
     border-radius: 20px;
   }
