--- a/components/main-header.module.css
+++ b/components/main-header.module.css
@@ -18,7 +18,7 @@
 @media screen and (max-width: 700px) {
   .header{
     width: 100%;
-    display: inline-block;
+    display: flex;
     padding: 0.3rem 2%;
     transition: 0.5s ease;
   }
@@ -40,7 +40,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
+    gap: 1rem;
     text-decoration: none;
     color: #ddd6cb;
     font-weight: bold;
@@ -60,7 +60,7 @@
     margin: 0;
     padding: 0;
     display: flex;
-    gap: 1.5rem;
+    gap: 0.7rem;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.25rem;
   }
