--- a/components/main-header.module.css
+++ b/components/main-header.module.css
@@ -21,6 +21,7 @@
     display: flex;
     padding: 0.3rem 2%;
     transition: 0.5s ease;
+    position: sticky;
   }
   .header a{
     font-size: 0.6rem;
@@ -31,7 +32,7 @@
     height: 2rem;
   }
   .smallHeader{
-    padding: 0.3rem 5%;
+    padding: 0.3rem 2%;
     transition: 0.5s ease;
   }
 }
@@ -60,7 +61,12 @@
     margin: 0;
     padding: 0;
     display: flex;
-    gap: 0.7rem;
+    gap: 0.2rem;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.25rem;
+  }
+
+  .nav li{
+    display: flex;
+    align-content: center;
   }
